--- a/index.html
+++ b/index.html
@@ -25,11 +25,33 @@
         <div class="col-6">
             <label for="weight_input" id="height"><strong>Your Weight:</strong></label><input type="text"
                 id="weight_input">
-        </div><br>
+        </div>
+
+        <br>
+        
+       <div class="form-check">
+       <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+       <label class="form-check-label" for="flexRadioDefault1">
+           MALE
+       </label>
+       </div>
+
+       <div class="form-check">
+           <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+           <label class="form-check-label" for="flexRadioDefault2">
+               FEMALE
+           </label>
+       </div>
+
+<hr>
+
         <div class="col-6">
-            <label for="calc" id="bmi-calc"><strong>Calculate BMI:</strong></label><button id="calc"
+            <label for="calc" id="bmi-calc"></label><button id="calc"
                 onclick="calculate()">Calculate</button>
         </div>
+<br>
+        
+<hr>
         <div class="col-6">
             <label for="display">The answer is: </label><input type="textbox" id="display" name="display">
         </div>
@@ -40,7 +62,7 @@
 
 
 
-</div> -->
+</div>
 
 <!-- JavaScript -->
 
